--- a/README.Rmd
+++ b/README.Rmd
@@ -43,17 +43,14 @@ This repository is structured as follow:
 - [`data/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/data):
 contains all raw data required to perform analyses
 
-- [`analyses/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/analyses/):
-contains R scripts to run each step of the workflow
-
-- [`outputs/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/outputs):
+- [`output/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/outputs):
 contains all the results created during the workflow
 
 - [`figures/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/figures):
 contains all the figures created during the workflow
 
 - [`R/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/R):
-contains R functions developed especially for this project
+contains R functions developed especially for this project and R scripts to run each step of the workflow
 
 - [`man/`](https://github.com/Ecosystem-Assessments/compendium/tree/master/man):
 contains help files of R functions
